# Pointcept

./: .env  .gitignore  .gitmodules  Dockerfile  Dockerfile1  Dockerfile2  DockerfileBuild  DockerfileEnv  INSTALL.md  INSTRUCTIONS.md  Makefile  PIPELINE.md  README.md  _README.md  docker-compose.yml  pyproject.toml  train.py
backups/: pyproject.toml
configs/heritage/: maritime_and_park_4090.py  maritime_park_library_4090.py  multi_site_v2.py  multi_site_v2_4090.py  park_row_v3.py  qh_inference.py  rog_and_foundry_4090.py  semseg-pt-v3m1-1-ppt-extreme.py
configs/scannet/: semseg-pt-v3m1-1-ppt-extreme-hf.py
exp/: .gitignore
exp/scannet/semseg-pt-v3m1-1-ppt-extreme/: config.py
fold_allocations/: brass_foundry_v1.pkl  maritime_museum_v1.pkl  park_row_v1.pkl  rog_north_v1.pkl  rog_south_v1.pkl
hbim_processing/: pdal_runner.py  process_raw_las.py
hbim_processing/pipeline_templates/: chipper.json  merge_categories.json  process_category.json
libs/: pyproject.toml
libs/pointgroup_ops/: setup.py
notebooks/: data_preprocessing.ipynb  library_splitter.ipynb  mesh_extraction.ipynb  mesh_testing.ipynb  persisting_folds.ipynb  point_inspection.ipynb  ppt-adaptations.ipynb  preprocess_qh.ipynb  preprocess_qh2.ipynb  preprocessing_testing.ipynb  rog_north_fine_splitting.ipynb  smart_fold_construction.ipynb  visualise_results_ptv3_scannet.ipynb  visualise_test_qh.ipynb  visualising_qh_inference.ipynb
notebooks/.ipynb_checkpoints/: visualise_results_ptv3_scannet-checkpoint.ipynb
notebooks/fold_allocations/: alg_updates2.ipynb  brass_foundry.ipynb  brass_foundry_3fold.pkl  maritime_museum.ipynb  park_row.ipynb  rog_north.ipynb  rog_south.ipynb  rog_south_3fold.pkl
notebooks/fold_allocations/.ipynb_checkpoints/: park_row-checkpoint.ipynb  rog_south-checkpoint.ipynb
notebooks/model_surgery/: lora_tests.ipynb  ptv3_ppt.ipynb
notebooks/plots/: confusion_matrix.ipynb
notebooks/recipes/: Untitled.ipynb  grid_based_sampling1.ipynb  mesh_cropping_with_capping.ipynb
pipelines/: park_row.json
pointcept/datasets/: __init__.py  dataloader.py  heritage.py  transform.py
pointcept/engines/: test.py  train.py
pointcept/engines/hooks/: misc.py
pointcept/models/octformer/: octformer_v1m1_base.py
pointcept/models/point_prompt_training/: __init__.py  point_prompt_training_v1m1_language_guided.py  prompt_driven_normalization.py
pointcept/models/point_prompt_training/lora/: __init__.py  ppt.py  tests.py  utils.py
pointcept/models/point_transformer_v3/: point_transformer_v3m1_base.py
pointcept/supplemental/: combine_results.py  converters.py  fold_allocation.py  library_funcs.py  lora_trainer.py  mesh_processing.py  preprocessing.py  utils.py  utils2.py
pointcept/utils/: misc.py
report/: bibliography.bib  main.typ
test/: config.py  custom-ppt-config.py  qh_onevoxel_test_inference.py  qh_template.py  vox6res0.2.py
tools/: convert_las.py  generate_clouds.py  generate_library_clouds.py  prepare_experiment.py  prepare_inference_las.py  preprocess_library.py  process_library_meshes.py  process_site_meshes.py  setup_data.py
wheels/: pointgroup_ops-0.0.0-cp311-cp311-linux_x86_64.whl
