[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry]
name = "pointcept"
version = "0.1.0"
description = ""
authors = ["Pointcept contributors"]

[tool.poe.tasks]
track = "mlflow server --backend-store-uri sqlite:///mlflow.db --default-artifact-root ./artifacts --host 0.0.0.0"
clean-mlflow = "mlflow gc --backend-store-uri sqlite:///mlflow.db"
jl = "jupyter lab --no-browser --allow-root --ip 0.0.0.0 --port 8888"

[tool.poetry.dependencies]
python = "^3.11"
# numpy = "^1.26"
numpy = "*"
torch = "^2.2"
torchvision = "^0.17"
torchaudio = "^2.2"
pylas = "*"
pandas = "*"
polars = "*"
pyarrow = "*"
xarray = "*"
open3d = "*"
addict = "*"
Pillow = "*" 
dask = "*"
scikit-learn = "^1.2.2"
# pointcept = "*"
tqdm = "^4.65.0"
imbalanced-learn = "^0.12.2"
treeinterpreter = "^0.2.3"
mlflow = "^2.3.2"
poethepoet = "^0.20.0"
pyntcloud = "^0.3.1"
gin-config = "^0.5.0"
umap-learn = "*"
sh = "^2.0.4"
seaborn = "^0.12.2"
typer = "^0.9.0"
pydantic = "^2.4.2"
jinja2 = "^3.1.2"
ninja = "*"
pyyaml = "*"
h5py = "*"
tensorboard = "*"#^2.16.2"
tensorboardx = "*"#^2.6.2.2"
yapf = "0.40.1"
wheel="*"
ftfy="*"
regex="*"
einops = "*"# "^0.7.0"
scipy = "*" # ^1.13.0
plyfile = "*"# ^1.0.3
termcolor = "*"# ^2.4.0
timm = "*"# ^0.9.16
torch_geometric = "*"
spconv-cu120 = "*"
pyg_lib = {url = "https://data.pyg.org/whl/torch-2.2.0+cu121/pyg_lib-0.4.0+pt22cu121-cp311-cp311-linux_x86_64.whl"}
torch_scatter = {url = "https://data.pyg.org/whl/torch-2.2.0+cu121/torch_scatter-2.1.2+pt22cu121-cp311-cp311-linux_x86_64.whl"}
torch_sparse = {url = "https://data.pyg.org/whl/torch-2.2.0+cu121/torch_sparse-0.6.18+pt22cu121-cp311-cp311-linux_x86_64.whl"}
torch_cluster = {url = "https://data.pyg.org/whl/torch-2.2.0+cu121/torch_cluster-1.6.3+pt22cu121-cp311-cp311-linux_x86_64.whl"}
torch_spline_conv = {url = "https://data.pyg.org/whl/torch-2.2.0+cu121/torch_spline_conv-1.2.2+pt22cu121-cp311-cp311-linux_x86_64.whl"}
clip = {git = "https://github.com/openai/CLIP.git"}
laspy = "*"
sharedarray = "3.2.4"

# pointops = {path = "./libs/pointops"}
# pointgroup_ops = {path = "./libs/pointgroup_ops"}
# pointops = {path = "./wheels/pointops-1.0-cp311-cp311-linux_x86_64.whl"}
# pointgroup_ops = {path = "./wheels/pointgroup_ops-0.0.0-cp311-cp311-linux_x86_64.whl"}

[tool.poetry.dev-dependencies]
jupyter="*"
plotly="*"
seaborn="*"
matplotlib="*"
jupyterthemes="*"
pytest="*"
pylint="*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

