[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry]
name = "pointcept"
version = "0.1.0"
description = "A version of the Pointcept poetry file with at least locked x.y versions."
authors = ["Pointcept contributors"]

[tool.poe.tasks]
track = "mlflow server --backend-store-uri sqlite:///mlflow.db --default-artifact-root ./artifacts --host 0.0.0.0"
clean-mlflow = "mlflow gc --backend-store-uri sqlite:///mlflow.db"
jl = "jupyter lab --no-browser --allow-root --ip 0.0.0.0 --port 8888"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.23"
torch = "^2.2"
torchvision = "^0.17"
torchaudio = "^2.2"
pylas = "^2.2"
pandas = "^1.4"
polars = "^0.13"
pyarrow = "^7.0"
xarray = "^0.20"
open3d = "^0.15"
addict = "^2.4"
Pillow = "^9.1"
dask = "^2022.2"
scikit-learn = "^1.2.2"
tqdm = "^4.65"
imbalanced-learn = "^0.12.2"
treeinterpreter = "^0.2.3"
mlflow = "^2.3.2"
poethepoet = "^0.20"
pyntcloud = "^0.3"
gin-config = "^0.5"
umap-learn = "^0.5"
sh = "^2.0"
seaborn = "^0.12"
typer = "^0.9"
pydantic = "^2.4"
jinja2 = "^3.1"
ninja = "^1.11"
pyyaml = "^6.0"
h5py = "^3.7"
tensorboard = "^2.9"
tensorboardx = "^2.5"
yapf = "^0.40"
wheel = "^0.37"
ftfy = "^6.1"
regex = "^2022.3"
einops = "^0.4"
scipy = "^1.8"
plyfile = "^0.7"
termcolor = "^2.1"
timm = "^0.5"
torch_geometric = "^2.0"
spconv-cu120 = "^2.2"
pyg_lib = {url = "https://data.pyg.org/whl/torch-2.2.0+cu121/pyg_lib-0.4.0+pt22cu121-cp311-cp311-linux_x86_64.whl"}
torch_scatter = {url = "https://data.pyg.org/whl/torch-2.2.0+cu121/torch_scatter-2.1.2+pt22cu121-cp311-cp311-linux_x86_64.whl"}
torch_sparse = {url = "https://data.pyg.org/whl/torch-2.2.0+cu121/torch_sparse-0.6.18+pt22cu121-cp311-cp311-linux_x86_64.whl"}
torch_cluster = {url = "https://data.pyg.org/whl/torch-2.2.0+cu121/torch_cluster-1.6.3+pt22cu121-cp311-cp311-linux_x86_64.whl"}
torch_spline_conv = {url = "https://data.pyg.org/whl/torch-2.2.0+cu121/torch_spline_conv-1.2.2+pt22cu121-cp311-cp311-linux_x86_64.whl"}
clip = {git = "https://github.com/openai/CLIP.git"}
laspy = "^2.2"
sharedarray = "^3.2"
pointops = {path = "./wheels/pointops-1.0-cp311-cp311-linux_x86_64.whl"}
pointgroup_ops = {path = "./wheels/pointgroup_ops-0.0.0-cp311-cp311-linux_x86_64.whl"}
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0"
plotly = "^5.6"
seaborn = "^0.12"
matplotlib = "^3.5"
jupyterthemes = "^0.20"
pytest = "^7.0"
pylint = "^2.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
