[tool.poetry]
name = "pointcept-builder"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false 

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26"
torch = "^2.2"
torchvision = "^0.17"
torchaudio = "^2.2"
wheel = "^0.43.0"
setuptools = "^71.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
